--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\"  \"npm run client\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "",
@@ -17,22 +20,6 @@
     "axios": "^0.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "body-parser": "^1.18.3",
-    "eject": "0.0.4",
-    "express": "^4.16.3",
-    "html-webpack-plugin": "^3.2.0",
-    "mongoose": "^5.2.8",
-    "mongoose-deep-populate": "^3.1.1",
-    "nodemailer": "^4.6.8",
-    "nodemailer-juice": "^1.0.1",
-    "react-beautiful-dnd": "^9.0.2",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^1.1.4",
-    "react-swipeable-views": "^0.12.16",
-    "react-toggle-switch": "^3.0.4",
-    "sendmail": "^1.4.1",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1",
-    "typeface-roboto": "0.0.54"
-  },
-  "devDependencies": {}
+    "concurrently": "^4.1.0"
+  }
 }
